--- a/team-P/src/server/views/root.ejs
+++ b/team-P/src/server/views/root.ejs
@@ -1,8 +1,9 @@
 <html>
   <head>
-    <title>Hello</title>
+    <title>GatorWins</title>
   </head>
   <body>
-    <p>Hello <%= title %></p>
+    <h1><%= title %></h1>
+    <p>Hello World</p>
   </body>
 </html>
