set up routes for week 3

--- a/team-P/src/server/views/root.ejs
+++ b/team-P/src/server/views/root.ejs
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Hello World</p>
+    <p>This page will serve as our unauthenticated landing page</p>
   </body>
 </html>
