added links to the landing page to help test out routes

--- a/team-P/src/server/views/signup.ejs
+++ b/team-P/src/server/views/signup.ejs
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>this will be where users sign up</p>
+    <p>This will be where users sign up</p>
   </body>
 </html>
