--- a/team-P/src/server/views/root.ejs
+++ b/team-P/src/server/views/root.ejs
@@ -5,5 +5,12 @@
   <body>
     <h1><%= title %></h1>
     <p>This page will serve as our unauthenticated landing page</p>
+    <p></p>
+    <p>Route Tests:</p>
+    <p></p>
+    <p> <a href= "login" >Login</a></p>
+    <p> <a href= "signup" >Register</a></p>
+    <p> <a href= "gamepage" >Game Page</a></p>
+    <p> <a href= "lobby" >Lobby</a></p>
   </body>
 </html>
