--- a/team-P/src/server/views/root.ejs
+++ b/team-P/src/server/views/root.ejs
@@ -8,8 +8,8 @@
     <p></p>
     <p>Route Tests:</p>
     <p></p>
-    <p> <a href= "login" >Login</a></p>
-    <p> <a href= "signup" >Register</a></p>
+    <p> <a href= "/auth/login" >Login</a></p>
+    <p> <a href= "/auth/signup" >Register</a></p>
     <p> <a href= "gamepage" >Game Page</a></p>
     <p> <a href= "lobby" >Lobby</a></p>
   </body>
