--- a/team-P/src/server/views/gamepage.ejs
+++ b/team-P/src/server/views/gamepage.ejs
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>This will be where users play the game</p>
+    <p>This will be where users play the game.</p>
   </body>
 </html>
